--- a/examples/csr-app/package.json
+++ b/examples/csr-app/package.json
@@ -21,6 +21,10 @@
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4"
   },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss":"^8.4.38"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
